[gd_scene load_steps=32 format=3 uid="uid://bwa6a5tj8jpsr"]

[ext_resource type="Script" uid="uid://chmgvkips3kol" path="res://Scripts/enemy_alien_gorilla.gd" id="1_i03gt"]
[ext_resource type="Texture2D" uid="uid://bgj0wq6sk3u6n" path="res://Game assets for demo/shadow.png" id="2_p7bgc"]
[ext_resource type="PackedScene" uid="uid://cm5on2wh0fj5p" path="res://Scenes/soft_collision.tscn" id="3_3o4s6"]
[ext_resource type="Shader" uid="uid://djex6djj71rmc" path="res://WhiteColor.gdshader" id="4_b6qms"]
[ext_resource type="Texture2D" uid="uid://dxo2vvm4185b4" path="res://Stuff for my game/alien_gorilla_smash.png" id="5_i03gt"]
[ext_resource type="Texture2D" uid="uid://3cjwog5oq4sp" path="res://Stuff for my game/alien_gorilla.png" id="6_i03gt"]
[ext_resource type="Texture2D" uid="uid://djrt2jc0x7w7j" path="res://Stuff for my game/alien_gorilla_run.png" id="7_q1rwi"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_v4uvs"]
size = Vector2(59, 61)

[sub_resource type="CircleShape2D" id="CircleShape2D_e1k3p"]
radius = 16.1245

[sub_resource type="ShaderMaterial" id="ShaderMaterial_6e6yc"]

[sub_resource type="Animation" id="Animation_bbmd2"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../AnimatedSprite2D:material")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [SubResource("ShaderMaterial_6e6yc")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../AnimatedSprite2D:material/shader_parameter/active")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [null]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../AnimatedSprite2D:material/shader_parameter")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [null]
}

[sub_resource type="ShaderMaterial" id="ShaderMaterial_1qnp7"]
shader = ExtResource("4_b6qms")
shader_parameter/active = true

[sub_resource type="ShaderMaterial" id="ShaderMaterial_j0l3l"]
shader = ExtResource("4_b6qms")
shader_parameter/active = false

[sub_resource type="Animation" id="Animation_gpa0k"]
resource_name = "blink"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../AnimatedSprite2D:material")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.966667),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [SubResource("ShaderMaterial_1qnp7"), SubResource("ShaderMaterial_j0l3l")]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_x6xkd"]
_data = {
&"RESET": SubResource("Animation_bbmd2"),
&"blink": SubResource("Animation_gpa0k")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_cab1g"]
radius = 134.015

[sub_resource type="CircleShape2D" id="CircleShape2D_mo8et"]
radius = 372.005

[sub_resource type="AtlasTexture" id="AtlasTexture_q1rwi"]
atlas = ExtResource("5_i03gt")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_cow08"]
atlas = ExtResource("5_i03gt")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_k5atv"]
atlas = ExtResource("5_i03gt")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_nlupe"]
atlas = ExtResource("5_i03gt")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_1d6ow"]
atlas = ExtResource("5_i03gt")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_uortl"]
atlas = ExtResource("5_i03gt")
region = Rect2(640, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_1s66e"]
atlas = ExtResource("5_i03gt")
region = Rect2(768, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_swwrx"]
atlas = ExtResource("5_i03gt")
region = Rect2(896, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_p7bgc"]
atlas = ExtResource("6_i03gt")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_3o4s6"]
atlas = ExtResource("7_q1rwi")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_b6qms"]
atlas = ExtResource("7_q1rwi")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_1e7s8"]
atlas = ExtResource("7_q1rwi")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_gcddh"]
atlas = ExtResource("7_q1rwi")
region = Rect2(384, 0, 128, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_d3k3w"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_q1rwi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cow08")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k5atv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nlupe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1d6ow")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uortl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1s66e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_swwrx")
}],
"loop": false,
"name": &"gorilla_attacking",
"speed": 11.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_p7bgc")
}],
"loop": true,
"name": &"gorilla_idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3o4s6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b6qms")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1e7s8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gcddh")
}],
"loop": true,
"name": &"gorilla_run",
"speed": 11.0
}]

[node name="Enemy_alien_gorilla" type="CharacterBody2D" groups=["Enemy"]]
visibility_layer = 4
motion_mode = 1
wall_min_slide_angle = 0.0
script = ExtResource("1_i03gt")

[node name="Shadow" type="Sprite2D" parent="."]
position = Vector2(-1, 0)
scale = Vector2(2.67099, 1.54709)
texture = ExtResource("2_p7bgc")

[node name="Hurtbox" type="Area2D" parent="." groups=["EnemyArea"]]
position = Vector2(0, 17)
collision_layer = 4
collision_mask = 6
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(0, -25)
shape = SubResource("RectangleShape2D_v4uvs")
metadata/_edit_lock_ = true

[node name="SoftCollision" parent="." instance=ExtResource("3_3o4s6")]
metadata/_edit_lock_ = true

[node name="RayCast2D" type="RayCast2D" parent="."]
exclude_parent = false
target_position = Vector2(-69, 28)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_e1k3p")
metadata/_edit_lock_ = true

[node name="Blink" type="AnimationPlayer" parent="."]
reset_on_save = false
root_node = NodePath("../Hurtbox")
libraries = {
&"": SubResource("AnimationLibrary_x6xkd")
}
speed_scale = 3.0

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
path_desired_distance = 60.0
path_postprocessing = 1
debug_enabled = true

[node name="Timer" type="Timer" parent="."]
wait_time = 0.3
autostart = true

[node name="ShotTimer" type="Timer" parent="."]

[node name="AttackRange" type="Area2D" parent="." groups=["EnemyArea"]]
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackRange"]
shape = SubResource("CircleShape2D_cab1g")
debug_color = Color(1, 0.0114042, 0.0220368, 0.42)
metadata/_edit_lock_ = true

[node name="DetectionArea" type="Area2D" parent="." groups=["EnemyArea"]]
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
modulate = Color(1, 1, 1, 0.254902)
shape = SubResource("CircleShape2D_mo8et")
metadata/_edit_lock_ = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_6e6yc")
position = Vector2(0, -24)
sprite_frames = SubResource("SpriteFrames_d3k3w")
animation = &"gorilla_run"
metadata/_edit_lock_ = true

[node name="ChaseTimer" type="Timer" parent="."]

[connection signal="area_entered" from="Hurtbox" to="." method="_on_hurtbox_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="ShotTimer" to="." method="_on_shot_timer_timeout"]
[connection signal="body_entered" from="AttackRange" to="." method="_on_attack_range_body_entered"]
[connection signal="body_exited" from="AttackRange" to="." method="_on_attack_range_body_exited"]
[connection signal="body_entered" from="DetectionArea" to="." method="_on_detection_area_body_entered"]
[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="timeout" from="ChaseTimer" to="." method="_on_chase_timer_timeout"]
